# live2dpet

./: .gitignore  CMakeLists.txt  LAppModel.cpp  LAppModel.hpp  game.cpp  game.h  main.cpp  readme.md  shader.cpp  shader.h  sprite.cpp  sprite.h  test.cpp  text_renderer.cpp  text_renderer.h  util.cpp  util.h
Framework/: CMakeLists.txt
Framework/src/Motion/: CubismMotion.cpp
resource/shaders/: basic_shader_pixel.hlsl  basic_shader_vert.hlsl  pixel.hlsl  vert.hlsl
